<resources>
    <string name="app_name">My Notes</string>
    <string name="hello">Hello.</string>
    <string name="todo">TODO</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_accounts">Create Accounts</string>
    <string name="loggin">LoggIn</string>
</resources>